--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@ h1{
 header,h3{
     color: white;
 }
+.completed{
+    text-decoration: line-through;
+}
 main {
     background-color: rgba(0, 0, 0, 0.5);
     max-width: 300px;
